implemented crud operations for location
